--- a/src/components/Welcome/Welcome.module.css
+++ b/src/components/Welcome/Welcome.module.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: "Comic Sans MS", sans-serif, monospace;
     border-bottom: 1.5px solid black;
 }
 
